pacman-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: pacman
  name: pacman
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pacman
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pacman
    spec:
      containers:
      - image: ghcr.io/fabioerabreu/pacman:2.0
        name: pacman
        resources:
          requests:
            cpu: 1m
status: {}
