pacman-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: pacman
    app.kubernetes.io/instance: pacman
  name: pacman
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: pacman
status:
  loadBalancer: {}
